--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,12 +84,17 @@ nav {
 
 /* Main content */
 main {
-    background-color: lightblue;
     /* Make main element take up any surplus space to push footer down */
     flex: 1 0 auto;
     margin-top: 47px;
 }
 
+/* Hero section */
+#hero {
+    height: 600px;
+    width: 100%;
+    background: url("../images/hero-image.webp") no-repeat center center/cover;
+}
 /* Footer */
 #social-networks {
     text-align: center;
